change from jackson to snakeyaml